--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
-  "name": "per-antenatal",
+  "name": "electron-quick-start",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "dependencies": {
-    "electron": "^1.4.3"
-  },
-  "devDependencies": {},
+  "description": "A minimal Electron application",
+  "main": "src/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron ."
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/HealthHackAu2016/per-antenatal.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/HealthHackAu2016/per-antenatal/issues"
-  },
-  "homepage": "https://github.com/HealthHackAu2016/per-antenatal#readme"
+  "repository": "https://github.com/electron/electron-quick-start",
+  "keywords": [
+    "Electron",
+    "quick",
+    "start",
+    "tutorial",
+    "demo"
+  ],
+  "author": "GitHub",
+  "license": "CC0-1.0",
+  "devDependencies": {
+    "electron": "^1.4.1"
+  }
 }
