--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "start": "electron ."
   },
   "repository": "https://github.com/HealthHackAu2016/per-antenatal",
-  "keywords": [
-  ],
+  "keywords": [],
   "author": "",
   "license": "MIT",
-  "devDependencies": {
-    "electron": "^1.4.1"
+  "dependencies": {
+    "bootstrap": "^3.3.7",
+    "easy-pdf-merge": "^0.1.3",
+    "electron": "^1.4.1",
+    "express": "^4.14.0",
+    "html-to-pdf": "^0.1.11",
+    "jquery": "^3.1.1"
   }
 }
