--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
     "easy-pdf-merge": "^0.1.3",
     "electron": "^1.4.1",
     "express": "^4.14.0",
     "html-to-pdf": "^0.1.11",
-    "jquery": "^3.1.1"
+    "jquery": "^3.1.1",
+    "mustache": "^2.2.1",
+    "mustache-express": "^1.2.2"
   }
 }
